zprovozněnej login (role zatim natvrdo guest)

--- a/app/templates/Project/projects.latte
+++ b/app/templates/Project/projects.latte
@@ -23,5 +23,6 @@
                 <td>{$pr->dokument->posledni_editace}</td>
             </tr>
         {/foreach}    
-    </tbody>    
+    </tbody> 
+    <!--<p><b>Heslo:</b> {$heslo}</p> -->
 </table>
