--- a/app/templates/Project/projects.latte
+++ b/app/templates/Project/projects.latte
@@ -2,7 +2,7 @@
 
 {block content}
 
-<h1>Seznam projektu</h1>
+<h1 n:block=title>Seznam projektu</h1>
 <table>
     <thead>
         <tr>
@@ -11,6 +11,7 @@
             <td>tym</td>
             <td>etapa</td>
             <td>editace</td>
+            <td colspan="2">Akce</td>
         </tr>
     </thead>
     <tbody>
@@ -21,8 +22,10 @@
                 <td>{$pr->tym->popis}</td>
                 <td>{$pr->etapa}</td>
                 <td>{$pr->dokument->posledni_editace}</td>
+                <td><a href="{link Project:editProject, $pr->ID, false, $pr->zakaznik->ID}">edit zakaznika</a></td>
+                <td><a href="{link Project:editProject, $pr->ID, true, $pr->tym->ID}">edit tymu</a></td>
             </tr>
         {/foreach}    
     </tbody> 
-    <!--<p><b>Heslo:</b> {$heslo}</p> -->
 </table>
+<a href="{link Project:addProject}">Pridat novy projekt</a>    
