--- a/app/templates/Homepage/default.latte
+++ b/app/templates/Homepage/default.latte
@@ -29,6 +29,7 @@
 	</div>
 
 	<h2>We hope you enjoy this framework!</h2>
+	<a n:href="Useredit:">add user</a> and <a href="www.google.com">google</a>.</p>
 
 	<section id="template">
 		<h2>This page template located at <span>{strstr($presenter->template->getFile(), app)}</span></h2>
