--- a/app/templates/Sign/default.latte
+++ b/app/templates/Sign/default.latte
@@ -5,7 +5,7 @@
 {/block}
 
 {block content}
-	<h1 n:block="title" style="display: none;"> Arboretum View </h1>
+	<h1 n:block="title" style="display: none;"> IS </h1>
   
   <div class="container-fluid">
     <div id="login">
