--- a/app/templates/Homepage/default.latte
+++ b/app/templates/Homepage/default.latte
@@ -13,7 +13,7 @@
         <li><a n:href="Sign:in">Přihlásit</a></li>
     {/if}
 </ul>
-
+<!--
 <div id="content">
 	<h2>You have successfully created your Nette Framework project.</h2>
 
@@ -36,11 +36,14 @@
 			<a href="http://pla.nette.org">tutorials</a> and <a href="http://forum.nette.org">forum</a>.</p>
 		</div>
 	</div>
-
+        
+-->
 	<h2>We hope you enjoy this framework!</h2>
-	<a n:href="Useredit:">add user</a> and <a href="www.google.com">google</a>
-	<a n:href="Useredit:usersList">list of users</a> and <a href="www.google.com">google</a>
-
+	<a n:href="Useredit:">add user</a> 
+	<a n:href="Useredit:usersList">list of users</a>
+    <a n:href="Team:teams">teams</a>
+    <a n:href="Project:projects">projects</a>
+<!--
 	<section id="template">
 		<h2>This page template located at <span>{strstr($presenter->template->getFile(), app)}</span></h2>
 
@@ -62,7 +65,7 @@
 	<footer>PHP {=PHP_VERSION} |
 		{ifset $_SERVER['SERVER_SOFTWARE']}Server {$_SERVER['SERVER_SOFTWARE']}{/ifset} |
 		Nette Framework {=Nette\Framework::VERSION}</footer>
-</div>
+</div>-->
 {/block}
 
 {block scripts}
@@ -78,13 +81,14 @@
 		return false;
 	});
 </script>
+
 {/block}
 
 
 {block head}
 <style>
 	html { overflow-y: scroll; }
-	body { font: 14px/1.65 Verdana, "Geneva CE", lucida, sans-serif; background: #3484d2; color: #333; margin: 38px auto; max-width: 940px; min-width: 420px; }
+	body { font: 14px/1.65 Verdana, "Geneva CE", lucida, sans-serif; color: #333; margin: 38px auto; max-width: 940px; min-width: 420px; }
 
 	h1, h2 { font: normal 150%/1.3 Georgia, "New York CE", utopia, serif; color: #1e5eb6; -webkit-text-stroke: 1px rgba(0,0,0,0); }
 
