--- a/app/templates/Homepage/default.latte
+++ b/app/templates/Homepage/default.latte
@@ -17,6 +17,8 @@
 	<li><a n:href="Useredit:usersList">Seznam uživatelů</a></li>
 	<li><a n:href="Team:teams">Týmy</a></li>
 	<li><a n:href="Project:projects">Projekty</a></li>
+	<li><a n:href="Request:new">Vytvoř poptávku</a></li>
+	<li><a n:href="Request:list">Seznam poptávek</a></li>
 </ul>
 <!--
 <div id="content">
