dokončení práce s týmy

--- a/app/templates/Team/addMember.latte
+++ b/app/templates/Team/addMember.latte
@@ -2,7 +2,7 @@
 
 {block content}
 
-<h1 n:block=title>Pridat clena do tymu</h1>
+<h1 n:block=title>{$nadpis}</h1>
 
 <p><b>Popis tymu:</b> {$popisTymu}</p>
 
