--- a/app/templates/Team/teams.latte
+++ b/app/templates/Team/teams.latte
@@ -4,13 +4,13 @@
 
 <h1 n:block=title>Seznam tymu</h1>
 
+<h2>Aktivni tymy</h2>
 <table>
     <thead>
         <tr>
             <td>ID</td>
             <td>popis</td>
             <td>datum zalozeni</td>
-            <td>clenove</td>
             <td>akce</td>
         </tr>
     </thead>
@@ -20,8 +20,31 @@
             <td>{$tym->ID}</td>
             <td>{$tym->popis}</td>
             <td>{$tym->datum_zalozeni}</td>
-            <td>{foreach $clenove[$tym->ID] as $clen}{$clen->osoba->jmeno}, {/foreach}</td>
-            <td><a href="{link Team:detail, $tym->ID}">detail</td>
+            <td>
+                <a href="{link Team:detail, $tym->ID}">detail</a>
+                <a href="{link delTeam!, $tym->ID}">deaktivovat</a>
+            </td>
+        </tr>
+    {/foreach}    
+    </tbody>    
+</table>
+<h2>Neaktivni tymy</h2>   
+<table>
+    <thead>
+        <tr>
+            <td>ID</td>
+            <td>popis</td>
+            <td>akce</td>
+        </tr>
+    </thead>
+    <tbody>
+    {foreach $ukoncene as $tym}
+        <tr>
+            <td>{$tym->ID}</td>
+            <td>{$tym->popis}</td>
+            <td>
+                <a href="{link Team:detail, $tym->ID}">detail</a>
+            </td>
         </tr>
     {/foreach}    
     </tbody>    
