--- a/app/templates/Homepage/default.latte
+++ b/app/templates/Homepage/default.latte
@@ -13,7 +13,8 @@
         <li><a n:href="Sign:in">Přihlásit</a></li>
     {/if}
 	
-	<li><a n:href="Useredit:">Přidej uživatele</a></li>
+	<li><a n:href="Useredit:">Přidej zákazníka</a></li>
+	<li><a n:href="Useredit:newEmployee">Přidej zaměstnance</a></li>
 	<li><a n:href="Useredit:usersList">Seznam uživatelů</a></li>
 	<li><a n:href="Team:teams">Týmy</a></li>
 	<li><a n:href="Project:projects">Projekty</a></li>
