--- a/app/templates/Useredit/notFound.latte
+++ b/app/templates/Useredit/notFound.latte
@@ -4,7 +4,9 @@
 
 <h1 n:block=title>Nenalezeno!</h1>
 
-<p>Bohuzel system nenalezl pozadovane informace!<br />
-    <a href="{link Homepage:default}">Domu</a>
+<p>Bohuzel system nenalezl pozadovane informace!<br/>
+	<a n:href="Useredit:usersList">Seznam uživatelů</a>
+	<br/>
+	<a href="{link Homepage:default}">Domů</a>
 </p>
 
