- nejaké detaily (hlavne odkazy)

--- a/app/templates/Useredit/usersList.latte
+++ b/app/templates/Useredit/usersList.latte
@@ -15,7 +15,7 @@
                         </a>
                         <ul class="dropdown-menu">
                             <li> <a href="users_edit.php?id_user=" class=""> <i class="icon16 i-king"></i> Nastavení</a></li> <!-- Doplnit id usera v href  --> 
-                            <li> <a href="logout.php" class=""> <i class="icon16 i-exit"></i> Logout</a> </li>
+                            <li> <a href="{link Sign:out}" class=""> <i class="icon16 i-exit"></i> Logout</a> </li>
                         </ul>
                     </li>
                     <li class="divider-vertical"></li>
@@ -42,7 +42,7 @@
                     <nav id="mainnav">
                         <ul class="nav nav-list"> 
                             <li>
-                                <a href="index.html">
+                                <a href="{link Homepage:default}">
                                     <span class="icon"><i class="icon20   i-pencil-5"></i></span>
                                     <span class="txt"> Domů </span>
                                 </a>
@@ -60,7 +60,7 @@
                                 </a>
                             </li>
                             <li>
-                                <a href="users.html">
+                                <a href="{link Useredit:usersList}">
                                     <span class="icon"><i class="icon20 i-user"></i></span>
                                     <span class="txt"> Správa uživatelů </span>
                                 </a>
