--- a/app/templates/Project/projects.latte
+++ b/app/templates/Project/projects.latte
@@ -1,33 +1,75 @@
-{* Latte template *}
+ {block content}
 
-{block content}
+{include ../header.latte}
 
-<h1 n:block=title>Seznam projektu</h1>
-<table>
-    <thead>
-        <tr>
-            <td>ID</td>
-            <td>zakaznik</td>
-            <td>tym</td>
-            <td>popis projektu</td>
-            <td>etapa</td>
-            <td>editace</td>
-            <td colspan="2">Akce</td>
-        </tr>
-    </thead>
-    <tbody>
-        {foreach $proj as $pr}
-            <tr>
-                <td>{$pr->ID}</td>
-                <td>{$pr->zakaznik->jmeno}</td>
-                <td>{$pr->tym->popis}</td>
-                <td>{$pr->popis}</td>
-                <td>{$pr->etapa}</td>
-                <td>{$pr->dokument->posledni_editace}</td>
-                <td><a href="{link Project:editProject, $pr->ID, $pr->tym->ID, $pr->zakaznik->ID}">edit projektu</a></td>
-                <td><a href="{link delete!, $pr->ID}" onclick="return confirm('Smazat?')">smazat projekt</a></td>
-            </tr>
-        {/foreach}    
-    </tbody> 
-</table>
-<a href="{link Project:addProject}">Pridat novy projekt</a>    
+<div class="main">
+    {include ../menu.latte}
+    <section id="content">
+        <div class="wrapper">
+            <div class="container-fluid">
+                <div id="heading" class="page-header">
+                    <h1><i class="icon20 i-users"></i> Operace s projekty </h1>
+                </div>
+
+                        
+                          <div class="row-fluid">
+                            <div class="span12">
+                                <div class="widget">
+                                    <div class="widget-title">
+                                        <div class="icon"><i class="icon20 i-vcard"></i></div> 
+                                        <h4>Projekty</h4>
+                                        <a href="#" class="minimize"></a>
+                                    </div><!-- End .widget-title -->
+                                
+                                    <div class="widget-content">
+                                        
+                                    <table cellpadding="0" cellspacing="0" border="0" class="table table-striped table-bordered table-hover dataTable" id="dataTable">
+                                        <thead>
+                                            <tr>
+                                                <th>ID</th>
+                                                <th>Zákazník</th>
+                                                <th>Tým</th>
+                                                <th>Popis projeku</th>
+                                                <th>Etapa</th>
+                                                <th>Editace</th>
+                                                <th>-</th>
+                                                <th>-</th>
+                                            </tr>
+                                        </thead>
+                                        <tbody>
+                                        {foreach $proj as $pr}
+                
+
+                                            <tr>
+                                                <td>{$pr->ID}</td>
+                                                <td>{$pr->zakaznik->jmeno}</td>
+                                                <td>{$pr->tym->popis}</td>
+                                                <td>{$pr->popis}</td>
+                                                <td>{$pr->etapa}</td>
+                                                <!--<td>{$pr->dokument->posledni_editace}</td>-->
+                                                <td>{$pr->dokument->posledni_editace}</td>
+                                                <td><a href="{link Project:editProject, $pr->ID, $pr->tym->ID, $pr->zakaznik->ID}">Edit</a></td>
+                                                <td><a href="{link delete!, $pr->ID}" onclick="return confirm('Smazat?')">Smazat</a></td>
+                                            </tr>
+                                            
+          <!-- /Foreach na USERY -->      {/foreach}
+                                        </tbody>
+                                    </table>
+                                        <div style="text-align: center;">
+                                            <a href="{link Project:addProject}"><h3>Přidat novy projekt</h3></a>    
+                                        </div>
+                                    </div><!-- End .widget-content -->
+                                </div><!-- End .widget -->
+                            </div><!-- End .span6  -->  
+                            
+                       </div>
+                                        
+                                        
+					
+                </div><!-- End .row-fluid  -->
+
+            </div> <!-- End .container-fluid  -->
+        </div> <!-- End .wrapper  -->
+{/block}      
+
+
