--- a/app/templates/Request/list.latte
+++ b/app/templates/Request/list.latte
@@ -1,19 +1,59 @@
-{* Latte template *}
+ {block content}
 
-{block content}
+{include ../header.latte}
 
-<table>
-	<tr>
-		<th>Název služby</th>
-		<th>Detail</th>
-	</tr>
-{foreach $requests as $request}
-	<tr>
-		<td>SLuzby : {$request->sluzby->nazev}</td> 
-		<td><a href="{link Request:detail, $request->ID}">info</a></td>
-	</tr>
-{/foreach}
-</table>
+<div class="main">
+    {include ../menu.latte}
+    <section id="content">
+        <div class="wrapper">
+            <div class="container-fluid">
+                <div id="heading" class="page-header">
+                    <h1><i class="icon20 i-users"></i> Operace s poptávkami </h1>
+                </div>
 
-<br><br>
-<a href="{link Homepage:default}">Domu</a>
+                        
+                          <div class="row-fluid">
+                            <div class="span12">
+                                <div class="widget">
+                                    <div class="widget-title">
+                                        <div class="icon"><i class="icon20 i-vcard"></i></div> 
+                                        <h4>Poptávky</h4>
+                                        <a href="#" class="minimize"></a>
+                                    </div><!-- End .widget-title -->
+                                
+                                    <div class="widget-content">
+                                        
+                                    <table cellpadding="0" cellspacing="0" border="0" class="table table-striped table-bordered table-hover dataTable" id="dataTable">
+                                        <thead>
+                                            <tr>
+                                                <th>Služba</th>
+                                                <th>-</th>
+                                            </tr>
+                                        </thead>
+                                        <tbody>
+                                        {foreach $requests as $request}
+                
+
+                                            <tr>
+                                                <td>{$request->sluzby->nazev}</td>
+                                                <td><a href="{link Request:detail, $request->ID}">Info</a></td>
+                                            </tr>
+                                            
+          <!-- /Foreach na USERY -->      {/foreach}
+                                        </tbody>
+                                    </table>
+                                    </div><!-- End .widget-content -->
+                                </div><!-- End .widget -->
+                            </div><!-- End .span6  -->  
+                            
+                       </div>
+                                        
+                                        
+					
+                </div><!-- End .row-fluid  -->
+
+            </div> <!-- End .container-fluid  -->
+        </div> <!-- End .wrapper  -->
+{/block}      
+
+
