--- a/app/templates/Team/teams.latte
+++ b/app/templates/Team/teams.latte
@@ -1,51 +1,109 @@
-{* Latte template *}
-
+    
+    
+    
+    
+    
 {block content}
 
-<h1 n:block=title>Seznam tymu</h1>
+{include ../header.latte}
 
-<h2>Aktivni tymy</h2>
-<table>
-    <thead>
-        <tr>
-            <td>ID</td>
-            <td>popis</td>
-            <td>datum zalozeni</td>
-            <td>akce</td>
-        </tr>
-    </thead>
-    <tbody>
-    {foreach $tymy as $tym}
-        <tr>
-            <td>{$tym->ID}</td>
-            <td>{$tym->popis}</td>
-            <td>{$tym->datum_zalozeni}</td>
-            <td>
-                <a href="{link Team:detail, $tym->ID}">detail</a>
-                <a href="{link delTeam!, $tym->ID}">deaktivovat</a>
-            </td>
-        </tr>
-    {/foreach}    
-    </tbody>    
-</table>
-<h2>Neaktivni tymy</h2>   
-<table>
-    <thead>
-        <tr>
-            <td>ID</td>
-            <td>popis</td>
-            <td>akce</td>
-        </tr>
-    </thead>
-    <tbody>
-    {foreach $ukoncene as $tym}
-        <tr>
-            <td>{$tym->ID}</td>
-            <td>{$tym->popis}</td>
-            <td>
-                <a href="{link Team:detail, $tym->ID}">detail</a>
-            </td>
-        </tr>
-    {/foreach}    
-    </tbody>    
-</table>
+<div class="main">
+    {include ../menu.latte}
+    <section id="content">
+        <div class="wrapper">
+            <div class="container-fluid">
+                <div id="heading" class="page-header">
+                    <h1><i class="icon20 i-users"></i> Seznam týmů</h1>
+                </div>
+
+                        
+                          <div class="row-fluid">
+                            <div class="span12">
+                                <div class="widget">
+                                    <div class="widget-title">
+                                        <div class="icon"><i class="icon20 i-vcard"></i></div> 
+                                        <h4>Aktivni týmy</h4>
+                                        <a href="#" class="minimize"></a>
+                                    </div><!-- End .widget-title -->
+                                
+                                    <div class="widget-content">
+                                        
+                                    <table cellpadding="0" cellspacing="0" border="0" class="table table-striped table-bordered table-hover">
+                                        <thead>
+                                            <tr>
+                                                <th>ID</th>
+                                                <th>Popis</th>
+                                                <th>Datum založení</th>
+                                                <th>-</th>
+                                                <th>-</th>
+                                            </tr>
+                                        </thead>
+                                        <tbody>
+                                        {foreach $tymy as $tym}
+                
+                                            <tr>
+                                                <td width="5%">{$tym->ID}</td>
+                                                <td width="35%">{$tym->popis}</td>
+                                                <td width="20%">{$tym->datum_zalozeni}</td>
+                                                <td width="20%"><a href="{link Team:detail, $tym->ID}">Detail</a></td>
+                                                <td width="20%"><a href="{link delTeam!, $tym->ID}">Deaktivovat</a></td>
+                                            </tr>
+                                            
+                                        {/foreach}
+                                        </tbody>
+                                    </table>
+                                    </div><!-- End .widget-content -->
+                                </div><!-- End .widget -->
+                            </div><!-- End .span6  -->  
+                            
+                       </div>
+                                        
+                          <div class="row-fluid">
+                            <div class="span12">
+                                <div class="widget">
+                                    <div class="widget-title">
+                                        <div class="icon"><i class="icon20 i-vcard"></i></div> 
+                                        <h4>Neaktivní týmy</h4>
+                                        <a href="#" class="minimize"></a>
+                                    </div><!-- End .widget-title -->
+                                
+                                    <div class="widget-content">
+                                        
+                                    <table cellpadding="0" cellspacing="0" border="0" class="table table-striped table-bordered table-hover">
+                                        <thead>
+                                            <tr>
+                                                <th>ID</th>
+                                                <th>Popis</th>
+                                                <th>Datum založení</th>
+                                                <th>-</th>
+                                                <th>-</th>
+                                            </tr>
+                                        </thead>
+                                        <tbody>
+                                        {foreach $tymy as $tym}
+                
+                                            <tr>
+                                                <td width="5%">{$tym->ID}</td>
+                                                <td width="35%">{$tym->popis}</td>
+                                                <td width="20%">{$tym->datum_zalozeni}</td>
+                                                <td width="20%"><a href="{link Team:detail, $tym->ID}">Detail</a></td>
+                                                <td width="20%"><a href="#">Aktivovat (nedodelane)</a></td>
+                                            </tr>
+                                            
+                                        {/foreach}
+                                        </tbody>
+                                    </table>
+                                    </div><!-- End .widget-content -->
+                                </div><!-- End .widget -->
+                            </div><!-- End .span6  -->  
+                            
+                       </div>
+                                                    
+					
+                </div><!-- End .row-fluid  -->
+
+            </div> <!-- End .container-fluid  -->
+        </div> <!-- End .wrapper  -->
+{/block}      
+
+
