--- a/app/templates/Project/editProject.latte
+++ b/app/templates/Project/editProject.latte
@@ -2,6 +2,6 @@
 
 {block content}
 
-<h1 n:block=title>Editace projektu</h1>
+<h1 n:block=title>Editace projektuuuuuuuu</h1>
 
 {control editProjectForm}
