--- a/app/templates/Useredit/usersList.latte
+++ b/app/templates/Useredit/usersList.latte
@@ -98,6 +98,7 @@
                                                 
                                                 <span class="name">-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;ROLE</span>
                                                 <div class="actions">
+													<a n:href="useredit:editUser $employee->ID" class="act act-primary gap-right10"><i class="icon12 i-pencil gap-left0"></i>Editovat</a>
                                                     <a n:href="useredit:delete $employee->ID" class="act act-primary gap-right10"><i class="icon12 i-pencil gap-left0"></i>Smazat</a>
                                                 </div>    
                                                     <span class="status tip" title="Administrator"><i class="icon20 i-king"></i></span>
@@ -135,6 +136,7 @@
                                                 
                                                 <span class="name">-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;ROLE</span>
                                                 <div class="actions">
+													<a n:href="useredit:editUser $customer->ID" class="act act-primary gap-right10"><i class="icon12 i-pencil gap-left0"></i>Editovat</a>
                                                     <a n:href="useredit:delete $customer->ID" class="act act-primary gap-right10"><i class="icon12 i-pencil gap-left0"></i>Smazat</a>
                                                 </div>    
                                                     <span class="status tip" title="Zákazník"><i class="icon20 i-king"></i></span>
