Add/Edit Sluzeb, Add poptavka (neozkouseno)

--- a/app/templates/Homepage/default.latte
+++ b/app/templates/Homepage/default.latte
@@ -38,6 +38,7 @@
                                         <li><a n:href="Project:projects">Projekty</a></li>
                                         <li><a n:href="Request:new">Vytvoř poptávku</a></li>
                                         <li><a n:href="Request:list">Seznam poptávek</a></li>
+                                        <li><a n:href="Request:services">Seznam sluzeb</a></li>
                                         
                                     </div><!-- End .widget-content -->
                                 </div><!-- End .widget -->
