--- a/app/templates/Homepage/default.latte
+++ b/app/templates/Homepage/default.latte
@@ -39,6 +39,7 @@
                                         <li><a n:href="Request:new">Vytvoř poptávku</a></li>
                                         <li><a n:href="Request:list">Seznam poptávek</a></li>
                                         <li><a n:href="Request:services">Seznam sluzeb</a></li>
+                                        <li><a n:href="Request:userDemand">Seznam poptavek uzivatele</a></li>
                                         
                                     </div><!-- End .widget-content -->
                                 </div><!-- End .widget -->
