--- a/app/templates/Request/list.latte
+++ b/app/templates/Request/list.latte
@@ -12,41 +12,90 @@
                 </div>
 
                         
-                          <div class="row-fluid">
-                            <div class="span12">
-                                <div class="widget">
-                                    <div class="widget-title">
-                                        <div class="icon"><i class="icon20 i-vcard"></i></div> 
-                                        <h4>Poptávky</h4>
-                                        <a href="#" class="minimize"></a>
-                                    </div><!-- End .widget-title -->
-                                
-                                    <div class="widget-content">
-                                        
-                                    <table cellpadding="0" cellspacing="0" border="0" class="table table-striped table-bordered table-hover dataTable" id="dataTable">
-                                        <thead>
-                                            <tr>
-                                                <th>Služba</th>
-                                                <th>-</th>
-                                            </tr>
-                                        </thead>
-                                        <tbody>
-                                        {foreach $requests as $request}
-                
+                        <div class="row-fluid">
+                          <div class="span12">
+                              <div class="widget">
+                                  <div class="widget-title">
+                                      <div class="icon"><i class="icon20 i-vcard"></i></div> 
+                                      <h4>Poptávky</h4>
+                                      <a href="#" class="minimize"></a>
+                                  </div><!-- End .widget-title -->
 
-                                            <tr>
-                                                <td>{$request->sluzby->nazev}</td>
-                                                <td><a href="{link Request:detail, $request->ID}">Info</a></td>
-                                            </tr>
-                                            
-          <!-- /Foreach na USERY -->      {/foreach}
-                                        </tbody>
-                                    </table>
-                                    </div><!-- End .widget-content -->
-                                </div><!-- End .widget -->
-                            </div><!-- End .span6  -->  
-                            
-                       </div>
+                                  <div class="widget-content">
+
+                                  <table cellpadding="0" cellspacing="0" border="0" class="table table-striped table-bordered table-hover dataTable" id="dataTable">
+                                      <thead>
+                                          <tr>
+                                              <th>Zakaznik</th>
+                                              <th>Datum poptavky</th>
+                                              <th>Stav</th>
+                                              <th>Datum zmeny stavu</th>
+                                              <th>-</th>
+                                          </tr>
+                                      </thead>
+                                      <tbody>
+                                          {foreach $demands as $demand}
+                                          <tr>
+                                              <td>{$demand->osoba->jmeno}</td>
+                                              <td>{$demand->datum}</td>
+                                              <td>{$demand->stav}</td>
+                                              {if $demand->stav != 'čeká na posouzení'}
+                                                  <td>{$demand->datum}</td>
+                                              {else}
+                                                  <td>-</td>
+                                              {/if}
+                                              <td><a href="{link Request:detail, $demand->ID}">Info</a></td>
+                                          </tr>
+
+        <!-- /Foreach na USERY -->      {/foreach}
+                                      </tbody>
+                                  </table>
+                                  </div><!-- End .widget-content -->
+                              </div><!-- End .widget -->
+                          </div><!-- End .span6  -->                             
+                     </div>
+                     <div class="row-fluid">
+                          <div class="span12">
+                              <div class="widget">
+                                  <div class="widget-title">
+                                      <div class="icon"><i class="icon20 i-vcard"></i></div> 
+                                      <h4>Odmitnute poptávky</h4>
+                                      <a href="#" class="minimize"></a>
+                                  </div><!-- End .widget-title -->
+
+                                  <div class="widget-content">
+
+                                  <table cellpadding="0" cellspacing="0" border="0" class="table table-striped table-bordered table-hover dataTable" id="dataTable">
+                                      <thead>
+                                          <tr>
+                                              <th>Zakaznik</th>
+                                              <th>Datum poptavky</th>
+                                              <th>Stav</th>
+                                              <th>Datum zmeny stavu</th>
+                                              <th>-</th>
+                                          </tr>
+                                      </thead>
+                                      <tbody>
+                                          {foreach $rejected as $demand}
+                                          <tr>
+                                              <td>{$demand->osoba->jmeno}</td>
+                                              <td>{$demand->datum}</td>
+                                              <td>{$demand->stav}</td>
+                                              {if $demand->stav != 'čeká na posouzení'}
+                                                  <td>{$demand->datum}</td>
+                                              {else}
+                                                  <td>-</td>
+                                              {/if}
+                                              <td><a href="{link Request:detail, $demand->ID}">Info</a></td>
+                                          </tr>
+
+        <!-- /Foreach na USERY -->      {/foreach}
+                                      </tbody>
+                                  </table>
+                                  </div><!-- End .widget-content -->
+                              </div><!-- End .widget -->
+                          </div><!-- End .span6  -->                             
+                     </div>                 
                                         
                                         
 					
